--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -48,6 +48,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 	.about__content {
 		padding-block: var(--space-l);
+
+		--switcher-min-width: 40ch;
 	}
 
 	.about__img {
