--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 :root {
 	--font-base: Georgia, serif;;
-  --font-display: system-ui, Inter, sans-serif;
-	--font-mono: 'Martian Mono', 'Roboto Mono', 'Fira Code', 'Courier New', monospace; 
+  --font-display:  -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Inter, system-ui, sans-serif;
+	--font-mono: 'Martian Mono', 'Space Mono', 'Geist Mono', 'Roboto Mono', 'Fira Code', 'Courier New', monospace; 
 	--clr-dark-shade: hsl(0, 0%, 0%);
 	--clr-dark: hsl(240, 8%, 10%);
 	--clr-dark-glare: hsl(240, 8%, 40%);
