Update button class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import LatestContent from "../components/LatestContent.astro";
 		<div class="content__block | inner-wrapper">
 			<div class="cta | flow">
 				<h2>Would like to work with me?</h2>
-				<a href="mailto:slava.zakharov@mailbox.org" title="Email Me" role="button">Email Me</a>
+				<a href="mailto:slava.zakharov@mailbox.org" class="button" title="Email me" role="button">Email Me</a>
 			</div>
 		</div>
 	</div>
