--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 :root {
 	--font-base: Georgia, serif;;
-  --font-display:  -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Inter, system-ui, sans-serif;
+  --font-display:  -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Inter, Arial, sans-serif;
 	--font-mono: 'Martian Mono', 'Space Mono', 'Geist Mono', 'Roboto Mono', 'Fira Code', 'Courier New', monospace; 
 	--clr-dark-shade: hsl(0, 0%, 0%);
 	--clr-dark: hsl(240, 8%, 10%);
@@ -103,7 +103,7 @@ blockquote {
   border-inline-start: .3em solid;
 }
 
-a[role="button"] {
+.button {
 	background: var(--clr-primary);
 	display: block;
 	font-family: var(--font-display);
@@ -113,8 +113,9 @@ a[role="button"] {
 	width: fit-content;
 }
 
-a[role="button"]:hover {
+.button:hover {
 	background: var(--clr-primary-glare);
+	scale: 0.96;
 }
 
 blockquote {
