--- a/src/styles/block.css
+++ b/src/styles/block.css
@@ -34,15 +34,21 @@
 		/* max-width: 75ch; */
 		max-width: 100%;
 	}
-
+	
 	pre {
 		overflow-wrap: normal;
 		overflow-x: auto;
 		overflow-y: auto;
+		padding: 2rem;
 		max-width: 100%;
 	}
 	
 	mark {
 		background-color: var(--clr-primary);
 	}
+	
+	[data-footnotes] ol:has([class]) {
+		padding-inline-start: 1.5rem;
+	}
 }
+
