--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -2,37 +2,38 @@
 .m-0 {
 	margin: calc(var(--step) * 0);
 }
-
 .mb-1 {
 	margin-block-end: calc(var(--step) * 1);
 }
-
 .mb-8 {
 	margin-block-end: calc(var(--step) * 8);
 }
-
 .mb-16 {
 	margin-block-end: calc(var(--step) * 16);
 }
-
 .px-1 {
 	padding-inline: calc(var(--step) * 1);
 }
-
 .pb-1 {
 	padding-block-end: calc(var(--step) * 1);
 }
-
 .gap-4 {
 	gap: calc(var(--step) * 4);
 }
-
 .gap-6 {
 	gap: calc(var(--step) * 6);
 }
-
+.gap-x-6 {
+	row-gap: calc(var(--step) * 6);
+}
 .gap-8 {
 	gap: calc(var(--step) * 8);
+}
+.gap-10 {
+	gap: calc(var(--step) * 10);
+}
+.gap-y-10 {
+	column-gap: calc(var(--step) * 10);
 }
 
 /* text alignment */
@@ -44,16 +45,18 @@
 	text-wrap: balance;
 }
 
+.text-pretty {
+	text-wrap: pretty;
+}
+
 /* fonts */
 .font-medium {
 	font-weight: var(--font-medium);
 }
-
 .text-base {
 	font-size: var(--text-base);
 	line-height: 1.5;
 }
-
 .text-2xl {
 	font-size: var(--text-2xl);
 	line-height: calc(2 / 1.5);
@@ -63,15 +66,12 @@
 .flex {
 	display: flex;
 }
-
 .flex-wrap {
 	flex-wrap: wrap;
 }
-
 .flex-col {
 	flex-direction: column;
 }
-
 .justify-between {
 	justify-content: space-between;
 }
