--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -36,15 +36,27 @@
 	column-gap: calc(var(--step) * 10);
 }
 
+/* translate */
+.translate-x-px {
+	translate: 1px 0;
+}
+.-translate-x-px {
+	translate: -1px 0;
+}
+.translate-y-px {
+	translate: 0 1px;
+}
+.-translate-y-px {
+	translate: 0 -1px;
+}
+
 /* text alignment */
 .text-center {
 	text-align: center;
 }
-
 .text-balance {
 	text-wrap: balance;
 }
-
 .text-pretty {
 	text-wrap: pretty;
 }
