--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -7,6 +7,11 @@
 		--foreground-3: var(--zinc-400);
 		--background-1: var(--zinc-900);
 
+		*::selection {
+			color: var(--gray-900);
+			background-color: var(--gray-50);
+		}
+
 		.reverse {
 			--foreground-1: var(--gray-900);
 			--foreground-2: var(--gray-800);
