Fix writing links

--- a/src/pages/_includes/writing.html
+++ b/src/pages/_includes/writing.html
@@ -1,7 +1,7 @@
 <ul class="flow" role="list" data-contents>
 	{% for item in items %}
 		<li>
-			<a href="{{ item.slug }}">{{ item.title }}</a>
+			<a href="{{ item.slug }}.html">{{ item.title }}</a>
 			<time>{{ item.date }}</time>
 		</li>
 	{% endfor %}
