Fix text overflow

--- a/src/pages/_includes/base.html
+++ b/src/pages/_includes/base.html
@@ -35,7 +35,7 @@
 
 			<main
 				class="flow text-pretty"
-				style="flex: 1; min-width: max(50%, 30ch); container-type: inline-size">
+				style="flex: 1; min-width: 65%; container-type: inline-size">
 				{% block content %}
 					{{ content | safe }}
 				{% endblock %}
