--- a/src/pages/_includes/base.html
+++ b/src/pages/_includes/base.html
@@ -6,10 +6,10 @@
 	<body>
 		{% include "_includes/banner.html" %}
 		<div
-			class="flex flex-wrap gap-10"
+			class="flex flex-wrap gap-10 pb-20"
 			style="
 				padding-inline: var(--page-space-x);
-				margin-block-start: var(--page-space-y);
+				padding-block-start: var(--page-space-y);
 			">
 			<header style="align-self: flex-start">
 				<h2 class="mb-1 flex gap-4 text-base font-semibold">
@@ -92,7 +92,7 @@
 						<br />
 						All content on this website is distributed under
 						<a
-							href="https://creativecommons.org/publicdomain/zero/1.0/"
+							href="https://github.com/petyapetr/slaaava.com/blob/main/CC.md"
 							style="white-space: pre"
 							>CC0 license</a
 						>
