--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -60,10 +60,6 @@ main {
 	max-width: 60ch;
 }
 
-main:last-child {
-	margin-bottom: calc(var(--step) * 10);
-}
-
 button[data-theme-switch] {
 	background-color: transparent;
 	border-color: transparent;
@@ -76,4 +72,12 @@ button[data-theme-switch] {
 button[data-theme-switch] svg {
 	width: calc(var(--step) * 5);
 	height: calc(var(--step) * 5);
+}
+
+main blockquote {
+	border-inline-start: var(--step) solid var(--foreground-3);
+	font-style: italic;
+	margin-inline-start: var(--page-space-x);
+	padding-block: calc(var(--step) * 4);
+	padding-inline-start: calc(var(--step) * 4);
 }
