--- a/src/pages/_includes/nav.html
+++ b/src/pages/_includes/nav.html
@@ -1,15 +1,20 @@
 <li>
 	<a
-		href="/writing.html"
+		href="/writing"
 		{% if group === "writing" %}data-page-current{% endif %}
 		>Writing</a
 	>
 </li>
 <li>
-	<a href="/about.html" {% if group === "about" %}data-page-current{% endif %}
+	<a href="/blogroll" {% if group === "blogroll" %}data-page-current{% endif %}
+		>Blogroll</a
+	>
+</li>
+<li>
+	<a href="/about" {% if group === "about" %}data-page-current{% endif %}
 		>About</a
 	>
 </li>
 <li>
-	<a href="/cv.html">CV</a>
+	<a href="/cv">CV</a>
 </li>
