Add anchor links

--- a/src/assets/css/utils.css
+++ b/src/assets/css/utils.css
@@ -23,6 +23,12 @@
 .pb-20 {
 	padding-block-end: calc(var(--step) * 20);
 }
+.gap-1 {
+	gap: calc(var(--step) * 1);
+}
+.gap-2 {
+	gap: calc(var(--step) * 2);
+}
 .gap-4 {
 	gap: calc(var(--step) * 4);
 }
@@ -54,6 +60,9 @@
 }
 .-translate-y-px {
 	translate: 0 -1px;
+}
+.translate-y-0\.5 {
+	translate: 0 calc(var(--step) * 0.5);
 }
 
 /* text alignment */
@@ -99,6 +108,9 @@
 }
 .flex-col {
 	flex-direction: column;
+}
+.items-baseline {
+	align-items: baseline;
 }
 .justify-between {
 	justify-content: space-between;
