--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -69,7 +69,7 @@ main {
 	max-width: 60ch;
 }
 
-button[data-theme-switch] {
+button {
 	background-color: transparent;
 	border-color: transparent;
 	color: inherit;
@@ -81,14 +81,6 @@ button[data-theme-switch] {
 button[data-theme-switch] svg {
 	width: calc(var(--step) * 5);
 	height: calc(var(--step) * 5);
-}
-
-main blockquote {
-	border-inline-start: var(--step) solid var(--foreground-3);
-	font-style: italic;
-	margin-inline-start: var(--page-space-x);
-	padding-block: calc(var(--step) * 4);
-	padding-inline-start: calc(var(--step) * 4);
 }
 
 @media print {
