--- a/src/assets/css/tokens.css
+++ b/src/assets/css/tokens.css
@@ -9,6 +9,9 @@
 	--gray-400: oklch(70.7% 0.022 261.325);
 	--gray-100: oklch(96.7% 0.003 264.542);
 	--gray-50: oklch(98.5% 0.002 247.839);
+	--gray-50: oklch(98.5% 0.002 247.839);
+	--purple-200: oklch(90.2% 0.063 306.703);
+	--purple-300: oklch(82.7% 0.119 306.383);
 	/* sizing */
 	--step: 0.25rem;
 	--size-xs: 28rem;
