--- a/src/assets/css/utils.css
+++ b/src/assets/css/utils.css
@@ -77,6 +77,12 @@
 }
 
 /* fonts */
+.font-sans {
+	font-family: var(--font-sans);
+}
+.font-serif {
+	font-family: var(--font-serif);
+}
 .font-mono {
 	font-family: var(--font-mono);
 }
