--- a/src/pages/_includes/banner.html
+++ b/src/pages/_includes/banner.html
@@ -1,11 +1,10 @@
 <p
-	class="m-0 reverse text-center"
+	class="reverse m-0 text-center font-sans"
 	style="
 		background-color: var(--background-1);
 		color: var(--foreground-1);
 		font-stretch: extra-expanded;
 		font-weight: 900;
-	"
->
+	">
 	Stop war in Ukraine!
 </p>
