--- a/src/pages/_includes/base.html
+++ b/src/pages/_includes/base.html
@@ -11,7 +11,7 @@
 				padding-inline: var(--page-space-x);
 				padding-block-start: var(--page-space-y);
 			">
-			<div class="no-print" style="align-self: flex-start">
+			<div class="header no-print" style="align-self: flex-start">
 				<nav>
 					<h2 class="mb-1 flex gap-4 text-base font-semibold">
 						<a href="/">Slava Zakharov</a>
