--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -9,28 +9,28 @@
 body {
 	background-color: var(--background-1);
 	color: var(--foreground-1);
-	font-family: var(--font-sans);
+	font-family: var(--font-serif);
 	font-size: var(--text-base);
 	line-height: 1.5;
+}
+
+:not([data-page="home"]) :is(h1, h2, h3, h4, .header, footer) {
+	font-family: var(--font-sans);
 }
 
 h1,
 h2 {
 	letter-spacing: 0.009em;
 }
-
 h1 {
 	font-size: var(--text-fluid-xl-2xl);
 }
-
 h2 {
 	font-size: var(--text-fluid-lg-xl);
 }
-
 h3 {
 	font-size: var(--text-fluid-base-lg);
 }
-
 h4 {
 	font-size: var(--text-base);
 }
